# vektor

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  cmake-format.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  CMakeLists.txt  bezier_curve.h  canny_edge_detector.cc  canny_edge_detector.h  image.cc  image.h  image_io.cc  image_io.h  kernel.h  main.cc  main.tsx  renderer.cc  renderer.h  tracer.cc  tracer.h
src/components/: ConfigPanel.tsx  FinalStageCanvas.tsx  MultiStageCanvas.tsx  index.tsx  stage.ts
src/cpp/: CMakeLists.txt  canny_edge_detector.cc  main.cc  pipeline.cc  pipeline.h  tracer.h  vektor_bin.cc  vektor_bindings.cc
src/cpp/vektor/: CMakeLists.txt  bezier_curve.h  canny_edge_detector.cc  canny_edge_detector.h  image.h  image_io.cc  image_io.h  kernel.h  renderer.cc  renderer.h  tracer.cc  tracer.h
src/hooks/: index.ts  usePipeline.ts  useVektorModule.ts  useVektorModule.tsx
src/utility/: image.ts  index.ts  stage.ts
src/vektor/: index.ts  types.d.ts
